# TCPscanner

./: .dockerignore  .gitignore  ARCHITECTURE_DIAGRAMS.md  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: main.yml
src/controller/: ScannerController.cpp  ScannerController.h
src/model/: ScannerModel.cpp  ScannerModel.h
src/modele/: ScannerModel.cpp
src/view/: ConsoleView.h  QtView.cpp  QtView.h
